# apps/api/src/modules/admin/feedback/helpers/admin.feedback.swagger.yaml
@@ -4,19 +4,26 @@
         summary: Get all feedbacks
         description: Retrieve a list of feedbacks based on filters like `user_id` and `status`.
         tags:
-          - Get feedbacks
+          - Admin-Feedback
         parameters:
+          - name: Accept-Language
+            in: header
+            required: true
+            schema:
+              type: string
+              enum: [en, fr]
+              default: en
+            description: Language code for localized responses (default is en)
           - in: query
             name: user_id
             required: false
             schema:
-              type: number
-            description: Filter feedbacks by user ID.
           - in: query
             name: status
             required: false
             schema:
               type: number
+              enum: [1,2]
             description: Filter feedbacks by status (e.g., 1 for active , 2 for inactive)
         responses:
           '200':
@@ -40,7 +47,7 @@
                       rating:
                         type: number
                         description: Rating given in the feedback.
-                      text:
+                      feedback:
                         type: string
                         description: Feedback text.
                       type:
