# apps/api/src/modules/user/feedback/helpers/feedback.types.ts
@@ -2,7 +2,7 @@ export interface IFeedback {
     user_id: number;
     module_id?: number | null;
     rating: number;
-    text: string;
+    feedback: string;
     type: number;
 };
 
