# apps/api/src/modules/user/index.ts
@@ -10,7 +10,7 @@ const router: Router = Router();
 // User routes
 router.use('/auth', authRoutes);
 router.use('/profile', userAuthMiddleware, profileRoutes);
-router.use('/feedback', feedbackRoutes);
+router.use('/feedback', userAuthMiddleware, feedbackRoutes);
 
 // Catch-all route for 404
 router.use((req: Request, res: Response) => sendResponse(res, StatusCodes.NOT_FOUND, `${req.originalUrl} not found`));
